@@ -9,6 +9,8 @@ Features
 Bugfixes
 --------
 
+* Make failures to get source commit hash non-fatal in
+  ``github_deploy`` (Issue #2847)
 * Less cryptic error when guessing format from extension in ``new_post``
   fails
 * Use Jupyter name more consistently in docs
